--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "inngest": "^3.40.1",
-    "mongoose": "^8.17.0"
+    "mongoose": "^8.17.0",
+    "stripe": "^18.4.0",
+    "svix": "^1.70.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
